# broxel

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  USERSCRIPTS.md  build.sh  build_appimage.sh  build_appimage_arm64.sh  build_cef_ozone.sh  build_portable.sh  build_portable_installer.sh  download_cef.sh
examples/: README.md  force-light-mode.js  reader-mode.js
examples/userscripts/: dark-mode.js  google-custom.js  test-page.js  userscripts.conf.example
screenshots/: brow6el_demo.webm
src/: bookmarks.cpp  bookmarks.h  browser_app.h  browser_client.cpp  browser_client.h  clipboard.cpp  clipboard.h  config.h  hint_mode.js  image_renderer.cpp  image_renderer.h  input_handler.cpp  input_handler.h  inspect_mode.js  kitty_renderer.cpp  kitty_renderer.h  main.cpp  mouse_emu.js  profile_config.cpp  profile_config.h  run_brow6el.sh  select_detector.js  sixel_renderer.cpp  sixel_renderer.h  status_bar.cpp  status_bar.h  terminal_detector.cpp  terminal_detector.h  tutorial.html  user_scripts.cpp  user_scripts.h  version.h.in  visual_mode.js
src/scripts/: adblock.js  force-light-mode.js  frameset-redirect.js  reader-mode.js  view-source.js
